# issue-log4cplus-lxc

./: CMakeLists.txt  README.md  Vagrantfile  boost_log_wrapper.h  install-boost-log.sh  install-log4cplus.sh  install-lxc.sh  install-spdlog.sh  log4cplus_wrapper.h  log_wrapper.h  main.cpp  spdlog_wrapper.h
